# loop-architecture.com

./: .gitignore  CNAME  README.md  editor.html  index.html  loop-storming.html  origin.html  robots.txt  sitemap.xml  styles.css
assets/: data-product-builder.flow.json  docs.flow.json  entropy-data.flow.json  self-learning.flow.json  skills-governance.flow.json  your-org.flow.json
docs/: loop-storming.md
examples/: data-product-builder.looparch.yaml  docs.looparch.yaml  entropy-data.looparch.yaml  self-learning.looparch.yaml  skills-governance.looparch.yaml  your-org.looparch.yaml  your-org.loopmanager.yaml
looparch/: README.md  pyproject.toml
looparch/src/looparch/: __init__.py  architecture.py  cli.py  favicon.py  flow.py  importer.py  layout.py  loop-architecture.schema.json  model.py  publish.py  sync.py  templates.py  validate.py
looparch/tests/: test_looparch.py
loopmanager/: LICENSE  README.md  pyproject.toml
loopmanager/src/loopmanager/: __init__.py  bundle.py  cli.py  cron.py  flow.py  importer.py  model.py  serve.py  validate.py
loopmanager/tests/: test_looparch.py
spec/: loop-architecture.md  loop-architecture.schema.json
visualizer/: index.html  package-lock.json  package.json  visualizer.css  visualizer.js  vite.config.js
visualizer/src/: dev.jsx  index.js  styles.css
visualizer/src/components/: Diagram.jsx  Editor.jsx  Monitor.jsx  Panel.jsx  nodes.jsx
visualizer/src/lib/: favicon.js  flow.js  layout.js  model.js
